@@ -116,6 +116,12 @@
             <script>
               changeBox(
                 "April",
+                "27",
+                "2023",
+                "Removed extra horizontal line on home page-Article count on the tag list updates dynamically!"
+              );
+              changeBox(
+                "April",
                 "17",
                 "2023",
                 "Removed scroll button-Reduced empty space between home topics"
